--- a/goSellSDK/Core/UI/Internal/Resources/TapButton.xib
+++ b/goSellSDK/Core/UI/Internal/Resources/TapButton.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -27,7 +25,7 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wfo-7c-2ys">
                     <rect key="frame" x="0.0" y="0.0" width="44" height="44"/>
                     <subviews>
-                        <glkView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" enableSetNeedsDisplay="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3GO-M7-fHX" customClass="TapActivityIndicatorView" customModule="TapGLKit">
+                        <glkView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" enableSetNeedsDisplay="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3GO-M7-fHX" customClass="TapActivityIndicatorView" customModule="TapGLKitV2">
                             <rect key="frame" x="9" y="9" width="26" height="26"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="26" id="6Rt-9G-hhW"/>
@@ -96,6 +94,7 @@
                 <constraint firstAttribute="bottom" secondItem="Wfo-7c-2ys" secondAttribute="bottom" id="tAC-Kr-Jes"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="-175" y="137"/>
         </view>
     </objects>
 </document>
