--- a/goSellSDK/Core/UI/Internal/Resources/LoadingView.xib
+++ b/goSellSDK/Core/UI/Internal/Resources/LoadingView.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -21,14 +19,14 @@
             <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ocI-IE-oxz" customClass="TapVisualEffectView" customModule="TapVisualEffectView">
+                <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ocI-IE-oxz" customClass="TapVisualEffectView" customModule="TapVisualEffectViewV2">
                     <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </view>
                 <view clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="T3d-ju-WQ6">
                     <rect key="frame" x="25" y="64" width="150" height="72.5"/>
                     <subviews>
-                        <glkView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" enableSetNeedsDisplay="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8sK-1i-We9" customClass="TapActivityIndicatorView" customModule="TapGLKit">
+                        <glkView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" enableSetNeedsDisplay="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8sK-1i-We9" customClass="TapActivityIndicatorView" customModule="TapGLKitV2">
                             <rect key="frame" x="56.5" y="0.0" width="37" height="37"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="8sK-1i-We9" secondAttribute="height" multiplier="1:1" id="3cr-jE-yah"/>
@@ -52,7 +50,7 @@
                         <constraint firstItem="xFt-XU-CSy" firstAttribute="leading" secondItem="T3d-ju-WQ6" secondAttribute="leading" id="t5U-4W-NkE"/>
                     </constraints>
                 </view>
-                <glkView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" enableSetNeedsDisplay="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qZx-yJ-ZWY" customClass="LinearGradientView" customModule="TapGLKit">
+                <glkView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" enableSetNeedsDisplay="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qZx-yJ-ZWY" customClass="LinearGradientView" customModule="TapGLKitV2">
                     <rect key="frame" x="0.0" y="0.0" width="200" height="2"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="2" id="442-OH-5qv"/>
@@ -82,6 +80,7 @@
                 <constraint firstAttribute="trailing" secondItem="ocI-IE-oxz" secondAttribute="trailing" id="nob-CD-gCq"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <point key="canvasLocation" x="139" y="154"/>
         </view>
     </objects>
 </document>
