Added goSell to the app clip. Simple UI for initiating payment within in App clip

--- a/Example/GoSellAppClip/Base.lproj/Main.storyboard
+++ b/Example/GoSellAppClip/Base.lproj/Main.storyboard
@@ -1,24 +1,67 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="GoSellAppClip" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LVK-Vw-Rts">
+                                <rect key="frame" x="20" y="59" width="374" height="60.5"/>
+                                <string key="text">Fill in these info, then choose whether you want to complete the payment witin the App Clip, or complete it within your main app.</string>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Amount" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gcP-kG-jzB">
+                                <rect key="frame" x="20" y="149.5" width="374" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="decimalPad" textContentType="tel"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xZ2-LY-tJJ">
+                                <rect key="frame" x="119" y="203.5" width="176" height="30"/>
+                                <state key="normal" title="Complete payment in app"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FgS-ra-XQK">
+                                <rect key="frame" x="103" y="253.5" width="208" height="30"/>
+                                <state key="normal" title="Complete payment in App Clip"/>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="LVK-Vw-Rts" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="85J-KB-ZPj"/>
+                            <constraint firstItem="gcP-kG-jzB" firstAttribute="top" secondItem="LVK-Vw-Rts" secondAttribute="bottom" constant="30" id="9fm-QU-1t0"/>
+                            <constraint firstItem="gcP-kG-jzB" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="BI4-Ad-8hd"/>
+                            <constraint firstItem="FgS-ra-XQK" firstAttribute="top" secondItem="xZ2-LY-tJJ" secondAttribute="bottom" constant="20" id="glN-mM-j9O"/>
+                            <constraint firstItem="FgS-ra-XQK" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="lsF-n0-oBS"/>
+                            <constraint firstItem="LVK-Vw-Rts" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="nzW-u9-EN1"/>
+                            <constraint firstItem="LVK-Vw-Rts" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="15" id="pwO-3O-e0u"/>
+                            <constraint firstItem="xZ2-LY-tJJ" firstAttribute="top" secondItem="gcP-kG-jzB" secondAttribute="bottom" constant="20" id="uwp-Jy-0w6"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gcP-kG-jzB" secondAttribute="trailing" constant="20" id="vlF-yp-2BO"/>
+                            <constraint firstAttribute="trailing" secondItem="LVK-Vw-Rts" secondAttribute="trailing" constant="20" id="wUz-tE-MLY"/>
+                            <constraint firstItem="xZ2-LY-tJJ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ye5-MZ-dAR"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="139" y="131"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
